# run_neural_network

./: docker-compose.yml
app/: CMakeLists.txt
app/html/: index.html
app/res/ai_bin/: googlenet_info.txt
app/res/models/: AppDispatcher_default_attribute_0.json
app/src/: CMakeLists.txt
app/src/classification/manifests/: Classification_default_attribute_0.json  Classification_manifest.json
config/: app_manifest.json
readme/: readme.adoc
wn9_neural_network_app/: DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_READY.md  DEVELOPMENT_GUIDE.md  PACKAGE_STATUS.md  README.md  REBUILD_INSTRUCTIONS.md  working_rebuild.sh
wn9_neural_network_app/app/libs/app_dispatcher/: AppDispatcher_manifest.json
wn9_neural_network_app/app/res/cert/: app_skel.crt  app_skel.pem
wn9_neural_network_app/app/res/models/: AppDispatcher_manifest_instance_0.json  Classification_manifest_instance_0.json
wn9_neural_network_app/app/src/: PLifeCycleManagermanifest.json
wn9_neural_network_app/app/src/classification/: CMakeLists.txt  classification.cc
wn9_neural_network_app/certs/: AppTest.crt  AppTest.key
wn9_neural_network_app/config/: app_manifest.json
wn9_neural_network_app/docs/: BUILD_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  GOOGLENET_ARCHITECTURE.md  WN9_TOOLCHAIN_ANALYSIS.md
wn9_neural_network_app/scripts/: build_wn9_cap.sh
wn9_neural_network_app/src/classification/includes/: classification.h
